# smeltr

./: .gitignore  .intendant.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  commitlint.config.js  commitlint.config.mjs  deny.toml  pyrightconfig.json  release-please-config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml  relock-on-release.yml
crates/smeltr-analyzer/: Cargo.toml
crates/smeltr-analyzer/fixtures/: synthetic-watchdog.json
crates/smeltr-analyzer/src/: breakdown.rs  crash_join.rs  diff.rs  dispatch_origins.rs  export.rs  finding.rs  lib.rs  memory.rs  op_clamp.rs  op_kinds.rs  report.rs  rule.rs
crates/smeltr-analyzer/src/rules/: duplicate_model_load.rs  hook_degradation.rs  lazy_eval_attribution.rs  memory_pressure.rs  metal_error.rs  mlx_timing.rs  mod.rs  queue_depth.rs  queue_pressure.rs  residency_pressure.rs  sidecar_absent.rs  system_pressure.rs
crates/smeltr-analyzer/tests/: integration.rs
crates/smeltr-cli/: Cargo.toml  build.rs
crates/smeltr-cli/src/: client.rs  degraded.rs  embedded_dylib.rs  lib.rs  main.rs  session_resolver.rs
crates/smeltr-cli/src/commands/: analyze.rs  breakdown.rs  compare.rs  daemon.rs  doctor.rs  export.rs  mark.rs  mcp.rs  memory.rs  mod.rs  origins.rs  record.rs  sessions.rs  tail.rs  tui.rs
crates/smeltr-cli/tests/: breakdown.rs  build_embeds_dylib.rs  daemon_guard.rs  e2e.rs  e2e_analyze.rs  mcp_stdio.rs  name_resolution_e2e.rs  scope_token_e2e.rs  scoped_sessions_e2e.rs
crates/smeltr-cli/tests/common/: mod.rs
crates/smeltr-core/: Cargo.toml
crates/smeltr-core/src/: chunked.rs  clock.rs  codec.rs  event.rs  filter.rs  lib.rs  reader.rs  session.rs  session_resolve.rs  writer.rs
crates/smeltr-daemon/: Cargo.toml
crates/smeltr-daemon/src/: bus.rs  client.rs  flight_recorder.rs  lib.rs  main.rs  panic_flush.rs  probes.rs  protocol.rs  recovery.rs  server.rs  session_router.rs  sessions.rs  sync_util.rs  triggers.rs
crates/smeltr-daemon/tests/: client_reconnect.rs  client_subscribe.rs  orphan_detach.rs  panic_flush.rs  subscribe_streaming.rs
crates/smeltr-mcp/: Cargo.toml
crates/smeltr-mcp/src/: http.rs  lib.rs  server.rs  tools.rs  types.rs
crates/smeltr-mcp/src/tools/: compare_sessions.rs  correlations.rs  crash_report.rs  dispatch_origins.rs  export_session.rs  inference_breakdown.rs  list_sessions.rs  memory_breakdown.rs  metal_cb_history.rs  model_loads.rs  op_summary.rs  query_events.rs  session_summary.rs  subscribe_live.rs
crates/smeltr-mcp/tests/: http_transport.rs  list_changed.rs  scope_breakdown.rs
crates/smeltr-metal-harness/: Cargo.toml
crates/smeltr-metal-harness/src/: main.rs
crates/smeltr-metal-harness/tests/: buffer_release.rs  prorata_window.rs  single_commit_event.rs  stage_backoff.rs  symbol_capture.rs
crates/smeltr-metal-ring/: Cargo.toml
crates/smeltr-metal-ring/include/: smeltr_ring.h
crates/smeltr-metal-ring/src/: decode.rs  error.rs  lib.rs  reader.rs  wire.rs  writer.rs
crates/smeltr-metal-ring/tests/: header_matches.rs  integrity.rs  round_trip.rs
crates/smeltr-probes-core/: Cargo.toml
crates/smeltr-probes-core/src/: lib.rs  probe.rs  sink.rs  supervisor.rs
crates/smeltr-probes-crash-reports/: Cargo.toml
crates/smeltr-probes-crash-reports/src/: lib.rs  parse.rs  probe.rs
crates/smeltr-probes-crash-reports/tests/fixtures/: sample.ips  sample_multiline.ips
crates/smeltr-probes-ioreport/: Cargo.toml
crates/smeltr-probes-ioreport/src/: lib.rs
crates/smeltr-probes-mach-exceptions/: Cargo.toml
crates/smeltr-probes-mach-exceptions/src/: lib.rs  port.rs  probe.rs
crates/smeltr-probes-metal-hook/: Cargo.toml
crates/smeltr-probes-metal-hook/src/: lib.rs  translate.rs
crates/smeltr-probes-oslog/: Cargo.toml
crates/smeltr-probes-oslog/src/: lib.rs  parse.rs  probe.rs  reaper.rs
crates/smeltr-probes-proc/: Cargo.toml
crates/smeltr-probes-proc/src/: lib.rs  probe.rs  raw.rs
crates/smeltr-probes-thermal/: Cargo.toml
crates/smeltr-probes-thermal/src/: lib.rs
crates/smeltr-probes-vm/: Cargo.toml
crates/smeltr-probes-vm/src/: lib.rs  probe.rs  raw.rs
crates/smeltr-replay/: Cargo.toml
crates/smeltr-replay/src/: lib.rs
crates/smeltr-tui/: Cargo.toml
crates/smeltr-tui/src/: app.rs  breakdown.rs  lib.rs  live.rs  models.rs  render.rs  replay.rs  scrub.rs  snapshot.rs  state.rs
crates/smeltr-tui/tests/: breakdown_view.rs  render_smoke.rs  replay_smoke.rs
docs/: README.md  dogfood-findings.md  migration-from-bespoke-profilers.md  usage.md
docs/adr/: 0001-initial-architecture.md  0002-op-attribution-pso-signature.md
metal-hook/: Makefile
metal-hook/include/: smeltr_ring.h  smeltr_ring_writer.h
metal-hook/src/: hook.mm  pso_map.h  pso_map.mm  ring.c
python/: README.md  pyproject.toml  pyrightconfig.json  smeltr-autoload.pth
python/src/smeltr/: __init__.py  _api.py  _autoload.py  _client.py  _mlx.py  _modelload.py  _modules.py  _proto.py  _scopes.py  _shutdown.py  _version.py
python/tests/: conftest.py  test_api.py  test_breakdown_e2e.py  test_client.py  test_e2e_daemon.py  test_export.py  test_mark_fields.py  test_mlx.py  test_modelload.py  test_modules.py  test_op_breakdown_e2e.py  test_scope_fields.py  test_scope_mem_sample.py  test_scope_token.py  test_scopes.py  test_scopes_e2e.py  test_shutdown.py  test_smoke.py  test_stack_capture.py
scripts/dogfood/: README.md  mlx_no_crash.py  mlx_stress.py  smoke-test.sh  smoke_workload.py
tests/: workspace_smoke.rs
