[workspace]
resolver = "2"
members = ["crates/smeltr-core"]
# smeltr-daemon added by Task 8, smeltr-cli added by Task 13.

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
