[workspace]
resolver = "2"
members = [
    "crates/smeltr-analyzer",
    "crates/smeltr-core",
    "crates/smeltr-daemon",
    "crates/smeltr-cli",
    "crates/smeltr-probes-core",
    "crates/smeltr-probes-vm",
    "crates/smeltr-replay",
    "crates/smeltr-probes-proc",
    "crates/smeltr-probes-thermal",
    "crates/smeltr-probes-oslog",
    "crates/smeltr-probes-ioreport",
    "crates/smeltr-probes-crash-reports",
    "crates/smeltr-probes-mach-exceptions",
    "crates/smeltr-metal-ring",
    "crates/smeltr-probes-metal-hook",
    "crates/smeltr-metal-harness",
    "crates/smeltr-tui",
    "crates/smeltr-mcp",
]

[workspace.package]
edition = "2021"
version = "0.21.0"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
schemars = "0.8"
