[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smeltr"
version = "0.3.1"
description = "Python sidecar for the smeltr Metal/MLX observability tool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "smeltr authors" }]
dependencies = [
    "cbor2>=5.4",
]

[project.optional-dependencies]
mlx = ["mlx>=0.18"]
dev = [
    "pytest>=7",
    "pytest-timeout>=2",
    "pytest-cov>=4",
    "ruff>=0.6",
    "ty>=0.0.1a13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/smeltr"]

[tool.hatch.build.targets.wheel.force-include]
"smeltr-autoload.pth" = "smeltr-autoload.pth"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 10

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = [
    "E501",  # line length is enforced by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "RUF"]

[tool.ty.environment]
python = ".venv"
python-version = "3.10"

[tool.ty.src]
include = ["src"]
exclude = ["tests", "**/__pycache__", "**/.venv"]

[tool.ty.rules]
# mlx is an optional dependency — its absence is documented in the README.
unresolved-import = "ignore"
# wrapped._smeltr_wrapped is set dynamically (same pattern as functools.wraps);
# a known type-checker false positive that is not worth annotating around.
unresolved-attribute = "ignore"
unused-type-ignore-comment = "ignore"
# _modules.py monkey-patches nn.Module.__call__ and installs an
# __init_subclass__ hook — both intentionally violate the strict
# function-signature equivalence ty enforces.
invalid-assignment = "ignore"
invalid-super-argument = "ignore"

[tool.coverage.run]
source = ["src/smeltr"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
