[package]
name = "smeltr-analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
smeltr-core = { path = "../smeltr-core" }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
serde_json = "1"
