[package]
name = "smeltr-cli"
edition.workspace = true
version.workspace = true

[[bin]]
name = "smeltr"
path = "src/main.rs"

[dependencies]
smeltr-core = { path = "../smeltr-core" }
smeltr-daemon = { path = "../smeltr-daemon" }
smeltr-probes-vm = { path = "../smeltr-probes-vm" }
smeltr-probes-proc = { path = "../smeltr-probes-proc" }
smeltr-probes-thermal = { path = "../smeltr-probes-thermal" }
smeltr-probes-ioreport = { path = "../smeltr-probes-ioreport" }
smeltr-probes-mach-exceptions = { path = "../smeltr-probes-mach-exceptions" }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
ciborium.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
