[package]
name = "smeltr-cli"
edition.workspace = true
version.workspace = true

[[bin]]
name = "smeltr"
path = "src/main.rs"

[dependencies]
smeltr-core = { path = "../smeltr-core" }
smeltr-analyzer = { path = "../smeltr-analyzer" }
smeltr-daemon = { path = "../smeltr-daemon" }
smeltr-probes-vm = { path = "../smeltr-probes-vm" }
smeltr-probes-proc = { path = "../smeltr-probes-proc" }
smeltr-probes-thermal = { path = "../smeltr-probes-thermal" }
smeltr-probes-ioreport = { path = "../smeltr-probes-ioreport" }
smeltr-probes-mach-exceptions = { path = "../smeltr-probes-mach-exceptions" }
smeltr-metal-ring = { path = "../smeltr-metal-ring" }
smeltr-tui = { path = "../smeltr-tui" }
smeltr-replay = { path = "../smeltr-replay" }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
ciborium.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
smeltr-core = { path = "../smeltr-core" }
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
ciborium.workspace = true
serde_json = "1"
serial_test = "3"
