[package]
name = "smeltr-core"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
ciborium.workspace = true
uuid.workspace = true
time.workspace = true
tracing.workspace = true
zstd = "0.13"

[dev-dependencies]
tempfile.workspace = true
serial_test = "3"
toml = "0.8"
