[package]
name = "smeltr-daemon"
edition.workspace = true
version.workspace = true

[lib]
name = "smeltr_daemon"
path = "src/lib.rs"

[[bin]]
name = "smeltrd"
path = "src/main.rs"

[dependencies]
smeltr-core = { path = "../smeltr-core" }
smeltr-probes-core = { path = "../smeltr-probes-core" }
smeltr-probes-vm = { path = "../smeltr-probes-vm" }
smeltr-probes-proc = { path = "../smeltr-probes-proc" }
smeltr-probes-thermal = { path = "../smeltr-probes-thermal" }
smeltr-probes-oslog = { path = "../smeltr-probes-oslog" }
smeltr-probes-ioreport = { path = "../smeltr-probes-ioreport" }
smeltr-probes-crash-reports = { path = "../smeltr-probes-crash-reports" }
smeltr-probes-mach-exceptions = { path = "../smeltr-probes-mach-exceptions" }
smeltr-probes-metal-hook = { path = "../smeltr-probes-metal-hook" }
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
ciborium.workspace = true
uuid.workspace = true
time.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
serial_test = "3"
