[package]
name = "smeltr-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
smeltr-core = { path = "../smeltr-core" }
smeltr-analyzer = { path = "../smeltr-analyzer" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = "3"
uuid = { workspace = true }
