[package]
name = "smeltr-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
smeltr-core = { path = "../smeltr-core" }
smeltr-analyzer = { path = "../smeltr-analyzer" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-std"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
serial_test = "3"
uuid = { workspace = true }
