[package]
name = "smeltr-metal-harness"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "smeltr-metal-harness"
path = "src/main.rs"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.30"

[target.'cfg(target_os = "macos")'.dev-dependencies]
smeltr-metal-ring = { path = "../smeltr-metal-ring" }
tempfile = { workspace = true }
