[package]
name = "smeltr-probes-ioreport"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
smeltr-core = { path = "../smeltr-core" }
smeltr-probes-core = { path = "../smeltr-probes-core" }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
