[package]
name = "smeltr-replay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
smeltr-core = { path = "../smeltr-core" }
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
uuid = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time", "test-util"] }
