[package]
name = "smeltr-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
smeltr-core = { path = "../smeltr-core" }
smeltr-daemon = { path = "../smeltr-daemon" }
smeltr-replay = { path = "../smeltr-replay" }
ratatui = "0.30"
crossterm = "0.29"
tokio = { workspace = true, features = ["sync", "time", "macros", "rt", "net", "io-util"] }
ciborium = "0.2"
serde = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
tempfile = "3"
serial_test = "3"
tokio = { workspace = true, features = ["sync", "time", "macros", "rt", "rt-multi-thread", "net", "io-util"] }
